Avoid traditions/traits line wrapping

--- a/src/styles/item/_rules.scss
+++ b/src/styles/item/_rules.scss
@@ -80,14 +80,6 @@
             }
         }
 
-        .tagify > span {
-            min-width: 40px;
-        }
-
-        .tagify--hasMaxTags > span {
-            display: none;
-        }
-
         &[data-key="Note"] {
             display: flex;
             flex-direction: column;
